# pixi-sync-environment

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/pixi_sync_environment/: __init__.py  cli.py  io.py  package_info.py  pixi_environment.py  sync.py
src/pre_commit_pixi_environment_file/: __init__.py  io.py  parser.py  pixi_environment.py
tests/: __init__.py  conftest.py  test_cli.py  test_integration.py  test_io.py  test_package_info.py  test_pixi_environment.py  test_sync.py
