[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "pre_commit_pixi_environment_file"
authors = [
    { name = "Bernardo Veronese", email = "bernardopveronese@gmail.com" },
]
description = "Pre-commit hook to sync a pixi environment with a traditional conda environment.yml"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
keywords = []
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
version = "0.1.0"
dependencies = ["pyyaml>=6.0.2,<7"]

[project.urls]
Homepage = "https://github.com/binado/pre-commit-pixi-environment-file"

[project.scripts]
sync_environments = "pre_commit_pixi_environment_file:main"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.pypi-dependencies]
pre_commit_pixi_environment_file = { path = ".", editable = true }

[tool.pixi.tasks]
sync-environments = "sync_environments"
